--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "This is an experiment to compare HTTP vs WebSockets performance using `Python server` <==> `Nodejs client`",
   "scripts": {
-    "test-fetch-flask": "babel-node src/fetch_client.js"
+    "fetch-flask": "PORT=5000 SERVER=flask babel-node src/fetch_client.js",
+    "fetch-fastapi": "PORT=5001 SERVER=fastapi babel-node src/fetch_client.js",
+    "fetch-client": "babel-node src/fetch_client.js",
+    "flask-server": "python src/flask_server.py --port 5000",
+    "fastapi-server": "python src/fastapi_server.py --port 5001"
   },
   "repository": {
     "type": "git",
