--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios-fastapi": "PORT=5001 SERVER=fastapi babel-node src/axios_client.js",
     "fetch-client": "babel-node src/fetch_client.js",
     "flask-server": "python src/flask_server.py --port 5000",
-    "fastapi-server": "python src/fastapi_server.py --port 5001"
+    "fastapi-server": "python src/fastapi_server.py --port 5001",
+    "fastapi-websocket-server": "python src/fastapi-websocket_server.py --port 5002",
+    "websocket-client": "PORT=5002 SERVER=fastapi-websocket babel-node src/websocket_client.js"
   },
   "repository": {
     "type": "git",
