--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "http-vs-websockets-performance",
   "version": "1.0.0",
-  "description": "This is an experiment to compare HTTP vs WebSockets performance using `Python server` <==> `Nodejs client`",
+  "description": "This is an experiment to compare HTTP vs WebSockets performance using `Nodejs client` <==> `Python server`",
   "scripts": {
-    "fetch-flask": "PORT=5000 SERVER=flask babel-node src/fetch_client.js",
-    "axios-flask": "PORT=5000 SERVER=flask babel-node src/axios_client.js",
-    "fetch-fastapi": "PORT=5001 SERVER=fastapi babel-node src/fetch_client.js",
-    "axios-fastapi": "PORT=5001 SERVER=fastapi babel-node src/axios_client.js",
-    "fetch-client": "babel-node src/fetch_client.js",
-    "flask-server": "python src/flask_server.py --port 5000",
-    "fastapi-server": "python src/fastapi_server.py --port 5001",
-    "fastapi-websocket-server": "python src/fastapi-websocket_server.py --port 5002",
-    "websocket-client": "PORT=5002 SERVER=fastapi-websocket babel-node src/websocket_client.js"
+    "fetch-flask": "PORT=5000 SERVER=flask babel-node src/clients/fetch.js",
+    "axios-flask": "PORT=5000 SERVER=flask babel-node src/clients/axios.js",
+    "flask-server": "python src/servers/flask.py --port 5000",
+
+    "fetch-fastapi": "PORT=5001 SERVER=fastapi babel-node src/clients/fetch.js",
+    "axios-fastapi": "PORT=5001 SERVER=fastapi babel-node src/clients/axios.js",
+    "fastapi-server": "python src/servers/fastapi.py --port 5001",
+
+    "websocket-fastapi-websocket": "PORT=5002 SERVER=fastapi-websocket babel-node src/clients/websocket.js",
+    "fastapi-websocket-server": "python src/servers/fastapi-websocket.py --port 5002",
+
+    "socketio-flask-socketio": "PORT=5003 SERVER=flask-socketio babel-node src/clients/socketio.js",
+    "flask-socketio-server": "python src/servers/flask-socketio.py --port 5003"
   },
   "repository": {
     "type": "git",
@@ -27,6 +31,7 @@
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
     "axios": "^0.20.0",
     "node-fetch": "^2.6.1",
+    "socket.io-client": "^2.3.0",
     "websocket": "^1.0.32",
     "ws": "^7.3.1"
   },
