--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "homepage": "https://github.com/jscriptcoder/HTTP-vs-WebSockets-performance#readme",
   "dependencies": {
-    "@babel/plugin-transform-async-to-generator": "^7.10.4",
     "axios": "^0.20.0",
     "node-fetch": "^2.6.1",
     "socket.io-client": "^2.3.0",
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@babel/node": "^7.10.5"
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-async-to-generator": "^7.10.4"
   }
 }
