--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "description": "This is an experiment to compare HTTP vs WebSockets performance using `Nodejs client` <==> `Python server`",
   "scripts": {
-    "fetch-flask": "PORT=5000 SERVER=flask babel-node src/clients/fetch.js",
-    "axios-flask": "PORT=5000 SERVER=flask babel-node src/clients/axios.js",
-    "flask": "python src/servers/flask.py --port 5000",
-    "fetch-fastapi": "PORT=5001 SERVER=fastapi babel-node src/clients/fetch.js",
-    "axios-fastapi": "PORT=5001 SERVER=fastapi babel-node src/clients/axios.js",
-    "fastapi": "python src/servers/fastapi.py --port 5001",
-    "websocket-fastapi-websocket": "PORT=5002 SERVER=fastapi-websocket babel-node src/clients/websocket.js",
-    "fastapi-websocket": "python src/servers/fastapi-websocket.py --port 5002",
-    "socketio-flask-socketio": "PORT=5003 SERVER=flask-socketio babel-node src/clients/socketio.js",
-    "flask-socketio": "python src/servers/flask-socketio.py --port 5003",
-    "websocket-eventlet": "PORT=5004 SERVER=eventlet babel-node src/clients/websocket.js",
-    "eventlet": "python src/servers/eventlet.py --port 5004"
+    "fetch-flask": "PORT=5000 SERVER=flask babel-node src/clients/fetch_client.js",
+    "axios-flask": "PORT=5000 SERVER=flask babel-node src/clients/axios_client.js",
+    "flask": "python src/servers/flask_server.py --port 5000",
+    "fetch-fastapi": "PORT=5001 SERVER=fastapi babel-node src/clients/fetch_client.js",
+    "axios-fastapi": "PORT=5001 SERVER=fastapi babel-node src/clients/axios_client.js",
+    "fastapi": "python src/servers/fastapi_server.py --port 5001",
+    "websocket-fastapi-websocket": "PORT=5002 SERVER=fastapi-websocket babel-node src/clients/websocket_client.js",
+    "fastapi-websocket": "python src/servers/fastapi-websocket_server.py --port 5002",
+    "socketio-flask-socketio": "PORT=5003 SERVER=flask-socketio babel-node src/clients/socketio_client.js",
+    "flask-socketio": "python src/servers/flask-socketio_server.py --port 5003",
+    "websocket-eventlet": "PORT=5004 SERVER=eventlet babel-node src/clients/websocket_client.js",
+    "eventlet": "python src/servers/eventlet_server.py --port 5004"
   },
   "repository": {
     "type": "git",
