--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   "homepage": "https://github.com/jscriptcoder/HTTP-vs-WebSockets-performance#readme",
   "dependencies": {
     "axios": "^0.20.0",
+    "chalk": "^4.1.0",
     "node-fetch": "^2.6.1",
     "socket.io-client": "^2.3.0",
     "websocket": "^1.0.32",
-    "ws": "^7.3.1"
+    "ws": "^7.3.1",
+    "yargs": "^16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
