--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
+    "presets": [
+        "@babel/preset-env"
+    ],
     "plugins": [
-        "@babel/plugin-transform-async-to-generator"
+        "@babel/plugin-transform-async-to-generator",
+        "@babel/plugin-proposal-class-properties"
     ]
 }
