--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chalk": "^4.1.0",
     "node-fetch": "^2.6.1",
     "socket.io-client": "^2.3.0",
+    "text-encoding": "^0.7.0",
+    "unique-names-generator": "^4.3.1",
     "websocket": "^1.0.32",
     "ws": "^7.3.1",
     "yargs": "^16.0.3"
