--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "http-client": "babel-node src/clients/http/http_client.js",
     "axios-client": "babel-node src/clients/http/axios_client.js",
     "fetch-client": "babel-node src/clients/http/fetch_client.js",
-    "superagent-client": "babel-node src/clients/http/superagent_client.js"
+    "superagent-client": "babel-node src/clients/http/superagent_client.js",
+    "socketio-client": "babel-node src/clients/ws/socketio_client.js",
+    "websocket-client": "babel-node src/clients/ws/websocket_client.js"
   },
   "repository": {
     "type": "git",
