--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "fetch-client": "babel-node src/clients/http/fetch_client.js",
     "superagent-client": "babel-node src/clients/http/superagent_client.js",
     "socketio-client": "babel-node src/clients/ws/socketio_client.js",
-    "websocket-client": "babel-node src/clients/ws/websocket_client.js"
+    "websocket-client": "babel-node src/clients/ws/websocket_client.js",
+    "ws-client": "babel-node src/clients/ws/ws_client.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jscriptcoder/HTTP-vs-WebSockets-performance.git"
   },
-  "author": "francisco.ramos@researchlab.ai",
+  "author": "Francisco Ramos <francisco.ramos@researchlab.ai>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jscriptcoder/HTTP-vs-WebSockets-performance/issues"
@@ -23,7 +24,7 @@
   "dependencies": {
     "@stomp/stompjs": "^5.4.4",
     "axios": "^0.20.0",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.0", 
     "node-fetch": "^2.6.1",
     "socket.io-client": "^2.3.0",
     "superagent": "^6.1.0",
