--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "superagent-client": "babel-node src/clients/http/superagent_client.js",
     "socketio-client": "babel-node src/clients/socketio/socketio_client.js",
     "websocket-client": "babel-node src/clients/ws/websocket_client.js",
-    "ws-client": "babel-node src/clients/ws/ws_client.js",
-    "stomp-client": "babel-node src/clients/ws/stomp_client.js"
+    "ws-client": "babel-node src/clients/ws/ws_client.js"
   },
   "repository": {
     "type": "git",
