--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==1.1.2
 Flask-SocketIO==4.3.1
+gevent-socketio==0.3.6
 gevent-websocket==0.10.1
 eventlet==0.27.0
 websockets==8.1
@@ -10,3 +11,4 @@ pyramid==1.10.4
 waitress==1.4.4
 bottle==0.12.18
 tornado==6.0.4
+CoilMQ==1.0.1
