--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
         "@babel/preset-env"
     ],
     "plugins": [
+        "@babel/plugin-transform-template-literals",
         "@babel/plugin-transform-async-to-generator",
         "@babel/plugin-proposal-class-properties"
     ]
