--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
+    "@babel/plugin-transform-template-literals": "^7.10.5",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5"
   }
